# flightradar_to_g1000

./: .gitignore  LICENSE  README.md  flightradar_to_g1000.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
sample_data/converted/: 38e7ef15_g1000.csv
sample_data/source/: 38e7ef15.csv  38e7ef15.kml
