[project]
name = "flightradar-to-g1000"
version = "0.1.2"
description = "This project converts FlightRadar24 ADSB CSVs into the G1000 format for loading into ForeFlight for review."
authors = [
    {name = "ReadyPlayerEmma"},
]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]

[project.scripts]
flightradar-to-g1000 = "flightradar_to_g1000:main"

[project.urls]
Homepage = "https://github.com/ReadyPlayerEmma/flightradar_to_g1000"
Issues = "https://github.com/ReadyPlayerEmma/flightradar_to_g1000/issues"
